--- a/src/app/modules/career-succession/talent-pool/talent-pool.component.html
+++ b/src/app/modules/career-succession/talent-pool/talent-pool.component.html
@@ -65,7 +65,7 @@
               <span>{{pool.title}}</span>
               <span style="margin-left: 5px; font-size: 12;">
                 <i class="fas fa-circle" style="font-size:xx-small; color: #4847E0; padding-right: 4px;"></i>
-                {{pool.no_of_employees}} Employees</span>
+                {{ pool.employeeTalentManagement.length }} Employees</span>
             </div>
 
             <div>
